--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,34 +21,34 @@ code_standards:
     # the Drupal Code Standards come from the Coder module, which is automatically part of the base testing image
     - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/modules/custom
     - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,css,info,txt,md web/themes/custom
-    
+
 #DRUPAL 8
 custom_tests_d8:
   stage: test
-  
+
   services:
   - theasci/docker-mysql-tmpfs:latest
-  
+
   script:
-    #apache should be running by default, and does on my local, but gitlabci 
+    #apache should be running by default, and does on my local, but gitlabci
     # prevents that for some reason, so we manually start it
-    # the & is important so it doesn't block everything below it from running. 
+    # the & is important so it doesn't block everything below it from running.
     - apache2-foreground > /dev/null 2>&1 &
-    
+
     # move to the webroot
     - cp . /var/www/html/ -rf
     - cd /var/www/html
-  
-    # if you have issues with rate limiting, you'll want to setup a github key variable and uncomment the config line below  
+
+    # if you have issues with rate limiting, you'll want to setup a github key variable and uncomment the config line below
     # https://getcomposer.org/doc/articles/troubleshooting.md#api-rate-limit-and-oauth-tokens
-    #- composer config -g github-oauth.github.com $DEPLOY_GITHUB
-    
+    - composer config -g github-oauth.github.com $DEPLOY_GITHUB
+
     - composer install
-    
-    #install the drupl site provided by the docker image so we can use it for testing
+
+    #install the drupal site provided by the docker image so we can use it for testing
     - cd web
-    - drush site-install standard --db-url='mysql://testrunner:@theasci__docker-mysql-tmpfs/drupal' -y    
-    
+    - drush site-install standard --db-url='mysql://testrunner:@theasci__docker-mysql-tmpfs/drupal' -y
+
     - export SIMPLETEST_DB='mysql://testrunner:@theasci__docker-mysql-tmpfs/drupal'
     - export SIMPLETEST_BASE_URL=http://localhost
     - export BROWSERTEST_OUTPUT_DIRECTORY=/tmp
@@ -59,17 +59,17 @@ custom_tests_d8:
 # paths default to D8, but we do use SASS on a few D7 sites, so adjust accordingly
 build:
   stage: build
-  
+
   # this tells the build server to save these files between jobs, this keeps them to be deployed
   artifacts:
     paths:
       - web/themes/custom/commerce_2_demo/css
-      
+
   script:
     - cd web/themes/custom/commerce_2_demo
     - npm install
     - gulp sass
-    
+
 # example deploy for dev, copy and replace with different servers as needed
 deploy-dev_d8:
   stage: deploy
