--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,7 @@ image: smmccabe/drupal:latest
 #image: smmccabe/drupal:php5.6
 
 variables:
-  MYSQL_SQL_TO_RUN: 'GRANT ALL ON *.* TO "testrunner"@"%"; create database drupal;'
-  MYSQLD_ARGS: '--skip-name-resolve --skip-host-cache'
+  MYSQL_SQL_TO_RUN: 'GRANT ALL ON \`%_test\`.* TO testrunner@"%" IDENTIFIED BY "testrunner"; create database drupal;'
   MYSQLD_RAM_SIZE: '1024'
 
 # jobs do not need to be present for all stages, if a stage has no jobs it will just be ignored
