Update .gitlab-ci.yml - fixes rsync... maybe

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ build:
     - gulp sass
 
 # example deploy for dev, copy and replace with different servers as needed
-deploy-dev_d8:
+deploy-uat:
   stage: deploy
 
   #add any other tags or branches you want here
@@ -106,9 +106,8 @@ deploy-dev_d8:
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 
-    # move updated files up to deployment server, exclude custom list of files plus .git since it's not needed
-    # if you want to add any additional exludes, add them to the .gitlabci-rsync-exclude.txt file in the repository root
-    # WARNING - Any files not in the repo AND not in the exlucde list will be removed, it is assumed they are not meant to be there and have been moved
-    - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ commerce-2-demo@aws1.acrobuild.com:/home/commerce-2-demo/www/commerce-2-demo/
+    #move updated files up to deployment server, exclude .git since it's not needed
+    - rsync -av --no-perms --no-owner --no-group --exclude '.git' /builds/accounts/commerce-2-demo/ commerce-2-demo@aws1.acrobuild.com:/home/commerce-2-demo/www/commerce-2-demo/
+
     # log into the site and flush cache
     - ssh commerce-2-demo@aws1.acrobuild.com 'cd www/commerce-2-demo && composer install'
