--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,13 @@
         "drupal/menu_block": "^1.4",
         "drupal/webform": "5.x-dev",
         "drupal/field_group": "1.x-dev",
+        "drupal/field_collection": "dev-3.x",
         "drupal/commerce_paypal": "~1.0",
-        "drupal/commerce_authnet": "~1.0"
+        "drupal/commerce_authnet": "~1.0",
+        "drupal/search_api": "^1.0",
+        "drupal/search_api_solr": "^1.0@beta",
+        "drupal/search_api_page": "^1.0-alpha11",
+        "drupal/facets": "^1.0-alpha9"
     },
     "require-dev": {
         "behat/mink": "~1.7",
