Adds theme graphics and favicon. Updates search api module version.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "~1.0",
         "drupal/search_api": "^1.0",
-        "drupal/search_api_solr": "^1.0@beta",
+        "drupal/search_api_solr": "^1.0-beta3",
         "drupal/search_api_page": "^1.0-alpha11",
         "drupal/facets": "^1.0-alpha9"
     },
