Adds Google fonts and styles LiveCSS page.

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "drupal/search_api_solr": "^1.0-beta3",
         "drupal/search_api_page": "^1.0-alpha11",
         "drupal/facets": "^1.0-alpha9",
-        "drupal/physical": "^1.0@RC"
+        "drupal/physical": "^1.0@RC",
+        "drupal/facets_pretty_paths": "1.x-dev"
     },
     "require-dev": {
         "behat/mink": "~1.7",
