--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,6 @@
         "drupal/menu_block": "^1.4",
         "drupal/webform": "5.x-dev",
         "drupal/field_group": "1.x-dev",
-        "drupal/field_collection": "dev-3.x",
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "~1.0",
         "drupal/commerce_shipping": "2.0-beta2",
@@ -43,7 +42,8 @@
         "drupal/facets": "^1.0-alpha9",
         "drupal/physical": "^1.0@RC",
         "drupal/facets_pretty_paths": "1.x-dev",
-        "drupal/taxonomy_term_depth": "2.x-dev"
+        "drupal/taxonomy_term_depth": "2.x-dev",
+        "drupal/paragraphs": "^1.1"
     },
     "require-dev": {
         "behat/mink": "~1.7",
