--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "drupal/facets_pretty_paths": "1.x-dev",
         "drupal/taxonomy_term_depth": "2.x-dev",
         "drupal/paragraphs": "^1.1",
-        "drupal/simple_gmap": "^1.3"
+        "drupal/simple_gmap": "^1.3",
+        "drupal/color_field": "^2.0-rc2"
     },
     "require-dev": {
         "behat/mink": "~1.7",
