--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,7 @@ build:
   script:
     - composer install --no-interaction --no-dev
     - cd web/themes/custom/commerce_2_demo
+    - npm install
     - gulp sass
 
 deploy-uat:
