--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ build:
     - npm install
     - gulp sass
 
-# Deploy INTERNAL demo.
+# Deploy STAGING site (AWS1).
 deploy-uat:
   stage: deploy
 
@@ -110,6 +110,44 @@ deploy-uat:
     # log into the site and flush cache
     - ssh commerce-2-demo@aws1.acrobuild.com 'cd www/commerce-2-demo && composer install'
 
+# This will be removed once setup on cloud4 instead.
+# Deploy CLIENT demo (CLOUD4 - manual deploy only).
+deploy-cloud4:
+  stage: deploy
+  when: manual
+
+  # add any other tags or branches you want here
+  only:
+    - master
+
+  environment:
+    name: cloud4
+    url: https://demo.drupalcommerce.com
+
+  script:
+    # Install ssh-agent if not already installed, it is required by Docker
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+
+    # Run ssh-agent (inside the build environment)
+    - eval $(ssh-agent -s)
+
+    # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+    - ssh-add <(echo "$DEPLOY_KEY_CLIENT_DEMO")
+
+    # For Docker builds disable host key checking. Be aware that by adding that
+    # you are susceptible to man-in-the-middle attacks.
+    # WARNING: Use this only with the Docker executor, if you use it with shell
+    # you will overwrite your user's SSH config.
+    - mkdir -p ~/.ssh
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
+    #move updated files up to deployment server, exclude .git since it's not needed
+    - rsync -av --no-perms --no-owner --no-group --exclude '.git' /builds/acro/commerce-2-demo/ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demo/
+
+    # log into the site and flush cache
+    - ssh drupalcommerce@cloud4.acromedia.comm 'cd www/demo && composer install'
+
+# This will be removed once setup on cloud4 instead.
 # Deploy CLIENT demo (manual deploy only).
 deploy-client:
   stage: deploy
