--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ stages:
 
 code_standards:
   stage: test
-  #when: manual
+  when: manual
   script:
     # runs the Drupal code standards checks on our custom code
     # the Drupal Code Standards come from the Coder module, which is automatically part of the base testing image
@@ -27,7 +27,7 @@ code_standards:
 #DRUPAL 8
 custom_tests_d8:
   stage: test
-  #when: manual
+  when: manual
 
   services:
   - theasci/docker-mysql-tmpfs:latest
@@ -78,6 +78,7 @@ build:
 # Deploy STAGING site (AWS1).
 deploy-uat:
   stage: deploy
+  when: manual
 
   # add any other tags or branches you want here
   only:
