--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
         "drupal/taxonomy_term_depth": "2.x-dev",
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
-        "drupal/color_field": "^2.0-rc2",
-        "drupal/add_to_head": "1.x-dev"
+        "drupal/color_field": "^2.0-rc2"
     },
     "require-dev": {
         "behat/mink": "~1.7",
