--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,9 @@
         "drupal/taxonomy_term_depth": "2.x-dev",
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
-        "drupal/color_field": "^2.0-rc2"
+        "drupal/color_field": "^2.0-rc2",
+        "doctrine/instantiator": "1.0.5",
+        "doctrine/collections": "1.4"
     },
     "require-dev": {
         "behat/mink": "~1.7",
