--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "drupal/simple_gmap": "^1.3",
         "drupal/color_field": "^2.0-rc2",
         "doctrine/instantiator": "1.0.5",
-        "doctrine/collections": "1.4"
+        "doctrine/collections": "1.4",
+        "doctrine/cache": "1.6.2"
     },
     "require-dev": {
         "behat/mink": "~1.7",
