--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "drupal/color_field": "^2.0-rc2",
         "doctrine/instantiator": "1.0.5",
         "doctrine/collections": "1.4",
-        "doctrine/cache": "1.6.2"
+        "doctrine/cache": "1.6.2",
+        "doctrine/common": "2.7.3"
     },
     "require-dev": {
         "behat/mink": "~1.7",
