Add tour libraries separate from global. Includes js.cookie.js library for cookies.

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.info.yml
@@ -8,6 +8,7 @@ base theme: orange_framework
 
 libraries:
   - commerce_2_demo/global-styling
+  - commerce_2_demo/tours
 
 ckeditor_stylesheets:
   - css/style.css
