--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
         "cweagans/composer-patches": "~1.0",
         "drupal/core": "~8.3.0",
         "drupal/console": "~1.0",
-        "drupal/commerce": "2.x-dev",
+        "drupal/commerce": "^2.0",
         "drupal/swiftmailer": "1.x-dev",
         "drupal/config_inspector": "1.x-dev",
         "drupal/entity": "1.x",
         "acromedia/drupalorange_profile": "dev-8.x-1.x",
         "drupal/menu_block": "^1.4",
         "drupal/webform": "5.x-dev",
-        "drupal/field_group": "1.x-dev",
+        "drupal/field_group": "~1.0-rc6",
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "~1.0",
         "drupal/commerce_shipping": "2.0-beta3",
@@ -46,10 +46,10 @@
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
         "drupal/color_field": "^2.0-rc2",
-        "doctrine/instantiator": "1.0.5",
-        "doctrine/collections": "1.4",
-        "doctrine/cache": "1.6.2",
-        "doctrine/common": "2.7.3"
+        "doctrine/instantiator": "~1.1.0",
+        "doctrine/collections": "~1.5.0",
+        "doctrine/cache": "~1.7.1",
+        "doctrine/common": "~2.8.1"
     },
     "require-dev": {
         "behat/mink": "~1.7",
