--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "drupal/simple_gmap": "^1.3",
         "drupal/color_field": "^2.0-rc2",
         "doctrine/instantiator": "~1.1.0",
-        "doctrine/collections": "~1.5.0",
+        "doctrine/collections": "1.4.0",
         "doctrine/cache": "~1.7.1",
         "doctrine/common": "~2.8.1"
     },
