--- a/composer.json
+++ b/composer.json
@@ -46,10 +46,10 @@
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
         "drupal/color_field": "^2.0-rc2",
-        "doctrine/instantiator": "~1.1.0",
+        "doctrine/instantiator": "1.0.5",
         "doctrine/collections": "1.4.0",
-        "doctrine/cache": "~1.7.1",
-        "doctrine/common": "~2.8.1"
+        "doctrine/cache": "1.6.2",
+        "doctrine/common": "2.7.3"
     },
     "require-dev": {
         "behat/mink": "~1.7",
