--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "composer/installers": "^1.2",
         "drupal-composer/drupal-scaffold": "^2.2",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.3.0",
+        "drupal/core": "~8.4.0",
         "drupal/console": "~1.0",
         "drupal/commerce": "^2.0",
         "drupal/swiftmailer": "1.x-dev",
@@ -35,7 +35,7 @@
         "drupal/field_group": "~1.0-rc6",
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "~1.0",
-        "drupal/commerce_shipping": "2.0-beta3",
+        "drupal/commerce_shipping": "~2.0-beta3",
         "drupal/search_api": "^1.0",
         "drupal/search_api_solr": "^1.0-beta3",
         "drupal/search_api_page": "^1.0-alpha11",
