--- a/composer.json
+++ b/composer.json
@@ -46,10 +46,12 @@
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
         "drupal/color_field": "^2.0-rc2",
-        "doctrine/instantiator": "1.0.5",
-        "doctrine/collections": "1.4.0",
-        "doctrine/cache": "1.6.2",
-        "doctrine/common": "2.7.3"
+        "drush/drush": "~8.1.15",
+        "doctrine/instantiator": "~1.0.5",
+        "doctrine/collections": "~1.4.0",
+        "doctrine/cache": "~1.6.2",
+        "doctrine/common": "~2.7.3",
+        "phpdocumentor/reflection-docblock": "^2.0"
     },
     "require-dev": {
         "behat/mink": "~1.7",
