--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,7 +142,7 @@ base-demo-to-uat:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need to call PHP 7.1 and then run Drush.
-    - ssh commerce-2-demo@aws1.acrobuild.com 'cd www/commerce-2-demo/web && /usr/bin/php7.1 /home/commerce-2-demo/www/commerce-2-demo/vendor/drush/drush/drush entup -y && /usr/bin/php7.1 /home/commerce-2-demo/www/commerce-2-demo/vendor/drush/drush/drush updb -y && /usr/bin/php7.1 /home/commerce-2-demo/www/commerce-2-demo/vendor/drush/drush/drush cr'
+    - ssh commerce-2-demo@aws1.acrobuild.com ssh commerce-2-demo@aws1 'bash -ic "cd www/commerce-2-demo/web && drush entup -y && drush updb -y && drush cr"'
 
 # Deploy plus demo to STAGING site (AWS1).
 plus-demo-to-uat:
