--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,11 +142,7 @@ base-demo-to-uat:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need to call PHP 7.1 and then run Drush.
-    - ssh commerce-2-demo@aws1.acrobuild.com 'bash -ic "drush --version"'
-    - ssh commerce-2-demo@aws1.acrobuild.com 'bash -ic "php -v"'
-    - ssh commerce-2-demo@aws1.acrobuild.com 'bash -ic "cd www/commerce-2-demo/web && drush entup -y"'
-    - ssh commerce-2-demo@aws1.acrobuild.com 'bash -ic "cd www/commerce-2-demo/web && drush updb -y"'
-    - ssh commerce-2-demo@aws1.acrobuild.com 'bash -ic "cd www/commerce-2-demo/web && drush cr"'
+    - ssh commerce-2-demo@aws1.acrobuild.com < ./scripts/remote-drush-commands.sh
 
 # Deploy plus demo to STAGING site (AWS1).
 plus-demo-to-uat:
