--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,7 +142,7 @@ base-demo-to-uat:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
-    - ssh commerce-2-demo@aws1.acrobuild.com '/bin/bash  -s' < ./scripts/remote-drush-commands_base-uat.sh
+    - ssh commerce-2-demo@aws1.acrobuild.com '/bin/bash -u -e -s' < ./scripts/remote-drush-commands_base-uat.sh
 
 # Deploy plus demo to STAGING site (AWS1).
 plus-demo-to-uat:
@@ -179,7 +179,7 @@ plus-demo-to-uat:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
-    - ssh commerce-2-demo@aws1.acrobuild.com '/bin/bash  -s' < ./scripts/remote-drush-commands_plus-uat.sh
+    - ssh commerce-2-demo@aws1.acrobuild.com '/bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-uat.sh
 
 
 # Deploy base demo to LIVE site (CLOUD4).
@@ -218,7 +218,7 @@ base-demo-to-live:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
-    - ssh drupalcommerce@cloud4.acromedia.com '/bin/bash  -s' < ./scripts/remote-drush-commands_base-live.sh
+    - ssh drupalcommerce@cloud4.acromedia.com '/bin/bash -u -e -s' < ./scripts/remote-drush-commands_base-live.sh
 
 # Deploy plus demo to LIVE site (CLOUD4).
 plus-demo-to-live:
@@ -256,4 +256,4 @@ plus-demo-to-live:
 
     # log into the site and flush cache
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
-    - ssh drupalcommerce@cloud4.acromedia.com '/bin/bash  -s' < ./scripts/remote-drush-commands_plus-live.sh
+    - ssh drupalcommerce@cloud4.acromedia.com '/bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live.sh
