Adjust site library handling - Rename plus.js to uh-axe.js. - Add uh-axe library and imports it in uh-axe page template. - Moves YouTube video link handling into global scripts.js file.

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -5,11 +5,18 @@ global-styling:
       css/style.css: { media: all }
   js:
     js/custom/script.js: {}
-    js/custom/plus.js: {}
   dependencies:
     - core/jquery
     - core/drupal
     - commerce_2_demo/fitVid
+
+uh-axe:
+  version: 1.x
+  js:
+    js/custom/plus/uh-axe.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
 
 slider:
   version: 1.x
