--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,11 @@
         "drupal/commerce_authnet": "~1.0",
         "drupal/commerce_shipping": "~2.0-beta3",
         "drupal/search_api": "^1.0",
-        "drupal/search_api_solr": "^1.0-beta3",
+        "drupal/search_api_solr": "^1.2",
         "drupal/search_api_page": "^1.0-alpha11",
-        "drupal/facets": "^1.0-alpha9",
+        "drupal/facets": "^1.0-beta1",
         "drupal/physical": "^1.0@RC",
-        "drupal/facets_pretty_paths": "1.x-dev",
+        "drupal/facets_pretty_paths": "^1.0-alpha1",
         "drupal/taxonomy_term_depth": "2.x-dev",
         "drupal/paragraphs": "^1.1",
         "drupal/simple_gmap": "^1.3",
@@ -113,6 +113,10 @@
             "drupal/commerce": {
                 "#2882905: Adds unique identifier for stored payment methods":
                 "https://www.drupal.org/files/issues/add_unique_identifier_for_stored_payment_methods-2882905-2.patch"
+            },
+            "drupal/facets_pretty_paths": {
+                "#2921502: Getting Error: ArgumentCountError: Too few arguments to function UrlProcessorPluginBase::__construct()":
+                "https://www.drupal.org/files/issues/getting_error-2921502-2.patch"
             }
         }
     }
