--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "~1.0",
         "drupal/commerce_shipping": "~2.0-beta3",
+        "drupal/commerce_recurring": "^1.0@beta",
+        "drupal/advancedqueue": "^1.0@beta",
         "drupal/search_api": "^1.0",
         "drupal/search_api_solr": "^1.2",
         "drupal/search_api_page": "^1.0-alpha11",
