Add UH Recurring Digital theme files - Add page, commerce and add to cart templates. - Add scss and js files. - Add uh-recurring-digital library to libraries.yml. - Add .theme form alter.

--- a/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
+++ b/web/themes/custom/commerce_2_demo/commerce_2_demo.libraries.yml
@@ -10,23 +10,6 @@ global-styling:
     - core/drupal
     - commerce_2_demo/fitVid
 
-uh-axe:
-  version: 1.x
-  js:
-    js/custom/plus/uh-axe.js: {}
-  dependencies:
-    - core/jquery
-    - core/drupal
-
-slider:
-  version: 1.x
-  js:
-    js/custom/slider.js: {}
-  dependencies:
-    - core/jquery
-    - core/drupal
-    - commerce_2_demo/slick-slider
-
 tours:
   version: 1.x
   css:
@@ -40,6 +23,31 @@ tours:
   dependencies:
     - core/jquery
     - core/drupal
+
+uh-axe:
+  version: 1.x
+  js:
+    js/custom/plus/uh-axe.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
+uh-recurring-digital:
+  version: 1.x
+  js:
+    js/custom/plus/uh-recurring-digital.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+
+slider:
+  version: 1.x
+  js:
+    js/custom/slider.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+    - commerce_2_demo/slick-slider
 
 slick-slider:
   version: 1.x
